Changed video to V18.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -80,9 +80,10 @@
 <p>From time to time we'll release videos demonstrating IV. As we get good ones, we'll post them here. Old videos can be found in the spoiler.<br /><br /></p>
 <p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/7BoHzec3Xds?wmode=transparent" height="358" width="638"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/Hfv8q3lROdc?wmode=transparent" height="358" width="638"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/6lNaRMRw4u4?wmode=transparent" height="358" width="638"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/gGIamX18Ssk?wmode=transparent" height="358" width="638"></iframe></p>
 <br>
 <div class="spoiler">
+<p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/6lNaRMRw4u4?wmode=transparent" height="358" width="638"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/p3eV0cIvAoU?wmode=transparent" height="358" width="638"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/qbzx7LHnLCQ?wmode=transparent" height="358" width="638"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/kCZoY4czQpw?wmode=transparent" height="358" width="638"></iframe></p>
