Added Waywardcraft pack to pack listing.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -11,7 +11,8 @@
 <br>
 <h4><strong>OCP Brand. From the core dev team.</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/transport-simulator-official-vehicle-set">OfficialVehicle Set</a></strong>: A small selection of vehicles. Each is designed to show off the capabilities of IV while still fitting into the Minecraft aesthetic.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/transport-simulator-official-vehicle-set">Official Vehicle Set</a></strong>: A small selection of vehicles. Each is designed to show off the capabilities of IV while still fitting into the Minecraft aesthetic.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/waywardcraft-iv-vehicle-pack">Waywardcraft Vehicle Pack</a></strong>: This pack is a port of the Waywardcraft Flansmod pack.  Use this if you want a classic MC vehicle experience.  Requires another pack for engines/seats/wheels.</li>
 </ul>
 <br>
 <h4><strong>UNU Brand. From Dr_prof_Luigi</strong></h4>
