Smoke now has adjustable duration

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -55,6 +55,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/liquids-vehicle-pack-immersive-vehicles">Liquid's Vehicle Pack:</a></strong>Don't want to risk players hijacking your heli and blowing things up? Try this civillian helicopter pack.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 </ul>
 <br>
 <br>
