Added Mizko's pack to the Curse site.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -50,12 +50,13 @@
 <br>
 <h4><strong>Small Packs.</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack"> Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/generic-american-motoring">Generic American Motoring:</a></strong>A pack from BlazeWolf1122 that adds a nice selection of vehicles. Emphasis is placed on sounds an animations over color variants.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/liquids-vehicle-pack-immersive-vehicles">Liquid's Vehicle Pack:</a></strong>Don't want to risk players hijacking your heli and blowing things up? Try this civillian helicopter pack.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/miszkos-vehicle-pack">Miszko's Vehicle Pack:</a></strong>Why wouldn't you take it for a spin?</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/generic-american-motoring">Generic American Motoring:</a></strong>A pack from BlazeWolf1122 that adds a nice selection of vehicles. Emphasis is placed on sounds an animations over color variants.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack"> Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/liquids-vehicle-pack-immersive-vehicles">Liquid's Vehicle Pack:</a></strong>Don't want to risk players hijacking your heli and blowing things up? Try this civillian helicopter pack.</li>
 </ul>
 <br>
 <br>
