Updated Curse Site.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -1,5 +1,6 @@
 <p><span style="color: #ff0000; font-size: 36px;">!!!NOTICE!!!</span></p>
 <p>This mod does not include any vehicles by default! If you are getting a warning message about missing packs, please download one of the fine packs linked in the Vehicle Packs section below! People complaining about "teh notice in mah face" will be ignored!</p>
+<p>Also, this mod will NOT be updating to higher MC versions.  Mojang has completely re-done and messed up the rendering pipeline for no gain and all pain for modders.  Combined with Forge being jerks, and mods splitting to Fabric, it is not worthwhile to update IV to higher versions.  However, if you want some features from higher MC versions in IV, come see us on the Discord!</p>
 <br>
 <p>Now with that out of the way....</p>
 <p><span style="font-size: 36px;">WE PROUDLY PRESENT TO YOU:</span><img src="https://media.forgecdn.net/attachments/245/826/banner.png" width="1700" height="715" /></p>
@@ -12,7 +13,7 @@
 <h4><strong>OCP Brand. From the core dev team.</strong></h4>
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/transport-simulator-official-vehicle-set">Official Vehicle Set</a></strong>: A small selection of vehicles. Each is designed to show off the capabilities of IV while still fitting into the Minecraft aesthetic.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/waywardcraft-iv-vehicle-pack">Waywardcraft Vehicle Pack</a></strong>: This pack is a port of the Waywardcraft Flansmod pack.  Use this if you want a classic MC vehicle experience.  Requires another pack for engines/seats/wheels.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/waywardcraft-iv-vehicle-pack">Waywardcraft Vehicle Pack</a></strong>: A port of the Waywardcraft Flansmod pack. A classic MC vehicle experience. Requires another pack for engines/seats/wheels.</li>
 </ul>
 <br>
 <h4><strong>UNU Brand. From Dr_prof_Luigi</strong></h4>
@@ -20,7 +21,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/unu-parts-pack">UNU Parts Pack:</a></strong>Required for all of Dr_prof_Luigi's packs. Contains critical parts like engines, seats, and bumper stickers.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/unu-civilian-pack-for-mts">UNU Civilian Pack:</a></strong>Cars, buses, trucks, scooters, etc. Pretty much anything else you can think of to use in a city.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/unu-military-pack-for-mts">UNU Military Pack:</a></strong>The military equivalent of the UNU civilian pack. For when you need a gun to go with your vehicle.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/redcliffe-republic-vehicles-mts-iv">RedCliffe Republic Pack:</a></strong>A set of post-apocalyptic vehicles. Good if you're going to a Mad Max themed map.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/redcliffe-republic-vehicles-mts-iv">Expanded UNUverse Pack:</a></strong>A set of post-apocalyptic vehicles. Good if you're going to a Mad Max themed map.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-air-cooled-vehicles-pack">Air-Cooled Pack:</a></strong>Corvairs, VW beetles, and other classic air-cooled cars.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iconic-movie-vehicles-pack-mts">Iconic Movie Vehicles Pack:</a></strong>Ever dreamt of having your very own Ecto-1? Now's your chance!</li>
 </ul>
@@ -28,8 +29,7 @@
 <h4><strong>Trin Brand. From The Oddly Seagull</strong></h4>
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/trin-part-pack">Trin Parts Pack:</a></strong>Adds wheels, seats, engines, and some accessories. Required for all Trin vehicles.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-trin-civil-pack-v2-extended">Civil Car Pack (Full):</a></strong>Gobs of civil vehicles. A bit more modern than the UNU civil pack, but still great for any city.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-trin-civil-pack-v2-compact">Civil Car Pack (Compact):</a></strong>A compact version of the civil pack. Contains fewer textures. Incompatible with the Full version.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-trin-civil-pack-v3">Immersive Vehicles Trin Civil Pack V3:</a></strong>Gobs of civil vehicles. A bit more modern than the UNU civil pack, but still great for any city.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-seagulls-military-car-pack">Military Car Pack:</a></strong>Adds some neat military vehicles. Multiple camo varieties means there's a vehicle for every base location.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-trin-emergency-pack">Emergency Pack:</a></strong>If flashing lights and sirens are your thing, see this pack of vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-trin-industrial-machinery-pack">Industrial Machinery Pack:</a></strong>For when you need to decorate that construction site with something besides pickup trucks.</li>
@@ -37,26 +37,26 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/diamond-warriors-team-mts-content-pack">Diamond Warriors Pack:</a></strong>Adds a good selection of vehicles. Models are simple and akin to classic Flansmod, so they won't hurt your FPS.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ Civilian Market:</a></strong>A small pack that add some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">Gyro Hero's Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">Mackrel Automotive Industries:</a></strong>A collection of European vehicles from them 40s to the 70s. Ideal if you need something RHD.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">Automobilwerke Schwikau VEB:</a></strong>A pack from Franz that adds a selection of East German vehicles.  One of the more unique offerings!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">Mackrel Automotive Industries:</a></strong>A various selection of small motor vehicles. An eclectic set for sure, but still good.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">Gyro Hero's Helicopter Pack:</a></strong>Tried of short runways and trees making flight difficult? Tired of players attacking you? Take off vertically and shoot them from far away with this pack.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/diamond-warriors-team-mts-content-pack">Diamond Warriors Pack:</a></strong>Adds a good selection of vehicles. Models are simple and akin to classic Flansmod, so they won't hurt your FPS.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ Industries Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/melvins-simple-sign-pack-mts">Melvin's Simple Sign Pack:</a></strong>Signs, signs, everywhere a sign. With over 500+ signs to add to your city, you'll have more signs than cars in no time!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-tesp">The Expanded Signs Pack:</a></strong>Oh, you need even more signs?  Well here you go!</li>
 </ul>
 <br>
-<h4><strong>Small Packs.</strong></h4>
+<h4><strong>Small & New Packs.</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-immersive-pokers-garage">Immersive Poker's Garage:</a></strong>World's finest exotic and luxury cars. Adds some exotic supercars, and parts for them</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/miszkos-vehicle-pack">Miszko's Vehicle Pack:</a></strong>Why wouldn't you take it for a spin?</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/generic-american-motoring">Generic American Motoring:</a></strong>A pack from BlazeWolf1122 that adds a nice selection of vehicles. Emphasis is placed on sounds an animations over color variants.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack"> Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/liquids-vehicle-pack-immersive-vehicles">Liquid's Vehicle Pack:</a></strong>Don't want to risk players hijacking your heli and blowing things up? Try this civillian helicopter pack.</li>
 </ul>
 <br>
 <br>
@@ -65,11 +65,12 @@
 <li><strong>Realistic Physics:</strong> Like really real. Planes takeoff like actual planes, running out of fuel doesn't make you fall like a rock, and ground physics are more than a vehicle sliding on ice. Plane flight takes into account speed, pitch, angle of attack, weight, engine life, propeller pitch, and much more. Vehicles are affected by speed, slick surfaces, blown tires, and even how many wheels are touching the ground.</li>
 <li><strong>Joystick and Mouse Support:</strong> Want to use that dusty old flight stick in Minecraft? Well now you can! Want to turn IV into Gran Turismo with a steering wheel? Also an option. IV gives you the ability to completely control any vehicle with any controller recognized as a joystick. If you're one of those people who thinks playing Minecraft with a controller is a sin, but still want a quicker response than the keyboard controls, then try out the built-in mouse yoke system. It's not perfect, but it allows for a flight experience that will be familiar to you if you've used Flan's or MCHeli.</li>
 <li><strong>In-Game Manual:</strong> Nobody wants to have to leave Minecraft to go look something up on a wiki. On this note IV comes equipped with a manual with details on how everything works in the mod. From how to build your first vehicle, to the specifics on engine care and why your engine is coughing out black smoke, the manual is the definitive guide for IV. Please do read it, as you just might learn something.</li>
-<li><strong>Fully Configurable:</strong> Maybe you want to have a plane to carry you and your buddy from your main base to a new one. Maybe you want to run ore shipments in the air to avoid the creepers that blow up your nice everythings. IV understands, and is comes with the ability to chose whether or not to equip your vehicle with seats or chests, allowing for numerous combinations of craft. Just don't try putting a chest in the pilot seat. That doesn't work too well...</li>
+<li><strong>Fully Customizable:</strong> Maybe you want to have a plane to carry you and your buddy from your main base to a new one. Maybe you want to run ore shipments in the air to avoid the creepers that blow up your nice everythings. IV understands, and is comes with the ability to chose whether or not to equip your vehicle with seats or chests, allowing for numerous combinations of craft. Just don't try putting a chest in the pilot seat. That doesn't work too well...</li>
 <li><strong>Pack-based:</strong> Rather than having things built-in and forcing you to wait for updates to get new vehicles, IV allows you to expand your selection of vehicles through content packs. We recommend the official content pack, however other packs or even your own creations are welcome! If you're familiar with Flan's pack system you'll feel right at home with IV's.</li>
 <li><strong>Working Gauges:</strong>IV is proud to offer you the largest selection of gauges available in the modded vehicle market. From altimeters to display height, to heading indicators to display direction you'll find yourself wondering why you ever needed the debug screen to navigate. There are even indicators to tell you the temp and oil pressure of engines and the current voltage of the electrical system. Now you'll never have to wonder if that arrow that was fired at you did any damage!</li>
 <li><strong>True Lighting:</strong> In the aim of efficiency and making things look cool, IV vehicles are equipped with real lights. No more relying on dynamic lights and their constant chunk updates and TPS-sapping. IV planes use true OpenGL blending to create realistic lighting effects that actually brighten the world around you. (Disclaimer: IV cannot be held responsible for mobs ignoring lights and causing you material or personal harm. Please contact your nearest armory to see if True Lighting is right for you.)</li>
 <li><strong>Inter-Mod Support:</strong> Rather than making yet another fuel for vehicles, or forcing you to download a mod as a dependency for fuel, IV has chosen to let you define what is a fuel. By default Lava can be use to run engines, but IV includes the ability to use any liquid from any mod as a valid fuel. You can also use pipes to fill up the fuel pump in the mod, allowing you to have a never-ending stream of fuel to supply your vehicles.</li>
+<li><strong>Extensive Configuration:</strong> Nearly everything in MTS can be configured.  From the crafting materials required to make a vehicle, to the choice of rendering the glass on the inside of a car.  Forge OreDict is fully supported as well, ensuring maximum compatibility with other mods.</li>
 </ul>
 <br>
 <h2><strong>Other Links:</strong></h2>
