Updated curse to include new sign pack and remove Mizko's pack.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -46,6 +46,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/fwp-mts-iv-american-signs-and-traffic-signals-pack">American Signs and Traffic Signals Pack:</a></strong>A vast collection of US style signs and signals based on the MUTCD.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/melvins-simple-sign-pack-mts">Melvin's Simple Sign Pack:</a></strong>Signs, signs, everywhere a sign. With over 500+ signs to add to your city, you'll have more signs than cars in no time!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-tesp">The Expanded Signs Pack:</a></strong>Oh, you need even more signs?  Well here you go!</li>
 </ul>
@@ -54,7 +55,6 @@
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-immersive-pokers-garage">Immersive Poker's Garage:</a></strong>World's finest exotic and luxury cars. Adds some exotic supercars, and parts for them</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/miszkos-vehicle-pack">Miszko's Vehicle Pack:</a></strong>Why wouldn't you take it for a spin?</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
 </ul>
