Added Cactus's Decor pack.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -57,6 +57,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-cactuss-decor-pack">Cactus's Decor Pack:</a></strong>Like CFM, but for IV and with less tables.</li>
 </ul>
 <br>
 <br>
