Updated Curse packs and pack orders.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -7,7 +7,7 @@
 <p>From the folks that brought you Minecraft Flight Simulator comes the all-new Immersive Vehicles mod! This mod is the result of over a year's worth of work and is the continuation and future of Minecraft Flight Simulator.<br /></p>
 <br>
 <br>
-<h2><strong>Vehicle Packs:</strong></h2>
+<h2><strong>Packs:</strong></h2>
 <p><strong>All vehicle packs go in your "mods" folder just like any other mod!</strong></p>
 <br>
 <h4><strong>OCP Brand. From the core dev team.</strong></h4>
@@ -37,27 +37,32 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">Gyro Hero's Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">Mackrel Automotive Industries:</a></strong>A collection of European vehicles from them 40s to the 70s. Ideal if you need something RHD.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">Automobilwerke Schwikau VEB:</a></strong>A pack from Franz that adds a selection of East German vehicles.  One of the more unique offerings!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/diamond-warriors-team-mts-content-pack">Diamond Warriors Pack:</a></strong>Adds a good selection of vehicles. Models are simple and akin to classic Flansmod, so they won't hurt your FPS.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ Industries Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">HA: Hero Aviation Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">VEB: Automobilwerke Schwikau:</a></strong>A pack from Franz that adds a selection of East German vehicles.  One of the more unique offerings!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">MAI: Mackrel Automotive Industries:</a></strong>A collection of European vehicles from them 40s to the 70s. Ideal if you need something RHD.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">TRVP: Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-immersive-pokers-garage">IPG: Immersive Poker's Garage:</a></strong>World's finest exotic and luxury cars. Adds some exotic supercars, and parts for them</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/diamond-warriors-team-mts-content-pack">DVT: Diamond Warriors Pack:</a></strong>Adds a good selection of vehicles. Models are simple and akin to classic Flansmod, so they won't hurt your FPS.</li>
+</ul>
+<br>
+<h4><strong>Sign and Decor Packs.</strong></h4>
+<ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/fwp-mts-iv-american-signs-and-traffic-signals-pack">American Signs and Traffic Signals Pack:</a></strong>A vast collection of US style signs and signals based on the MUTCD.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/melvins-simple-sign-pack-mts">Melvin's Simple Sign Pack:</a></strong>Signs, signs, everywhere a sign. With over 500+ signs to add to your city, you'll have more signs than cars in no time!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-tesp">The Expanded Signs Pack:</a></strong>Oh, you need even more signs?  Well here you go!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-cactuss-decor-pack">Cactus's Decor Pack:</a></strong>Like CFM, but for IV and with less tables.</li>
 </ul>
 <br>
-<h4><strong>Small & New Packs.</strong></h4>
+<h4><strong>Small, New, and Old Packs.</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-immersive-pokers-garage">Immersive Poker's Garage:</a></strong>World's finest exotic and luxury cars. Adds some exotic supercars, and parts for them</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-cactuss-decor-pack">Cactus's Decor Pack:</a></strong>Like CFM, but for IV and with less tables.</li>
 </ul>
 <br>
 <br>
