--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -41,7 +41,8 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">VEB: Automobilwerke Schwikau:</a></strong>A pack from Franz that adds a selection of East German vehicles.  One of the more unique offerings!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-iav-parts-pack">IAV Parts Pack:</a></strong>The current parts library for VEB Automobilwerke Schwikau and Mackrel Automotive Industries.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">VEB: Automobilwerke Schwikau:</a></strong>Do you need a bad car that lasts forever, or maybe a tank or two?  One of the more unique offerings!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">MAI: Mackrel Automotive Industries:</a></strong>A collection of European vehicles from them 40s to the 70s. Ideal if you need something RHD.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">TRVP: Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
@@ -61,6 +62,7 @@
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>For when nothing is good enough, Hashim as you covered with some exelently polished vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
 </ul>
