--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -38,7 +38,7 @@
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">HA: Hero Aviation Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
+<li><strong><a href="https://www.planetminecraft.com/mod/immersive-vehicles-vanity-mts-iv-pack/">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-iav-parts-pack">IAV Parts Pack:</a></strong>The current parts library for VEB Automobilwerke Schwikau and Mackrel Automotive Industries.</li>
