--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -41,7 +41,7 @@
 <li><strong><a href="https://www.planetminecraft.com/mod/immersive-vehicles-vanity-mts-iv-pack/">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-craftspeed">Craftspeed: Getting a stock car is just the beginning, time to make it your own unique project!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-craftspeed">Craftspeed:</a></strong> Getting a stock car is just the beginning, time to make it your own unique project!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-iav-parts-pack">IAV Parts Pack:</a></strong>The current parts library for VEB Automobilwerke Schwikau and Mackrel Automotive Industries.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">VEB: Automobilwerke Schwikau:</a></strong>Do you need a bad car that lasts forever, or maybe a tank or two?  One of the more unique offerings!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
