--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -37,14 +37,14 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">HA: Hero Aviation Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
 <li><strong><a href="https://www.planetminecraft.com/mod/immersive-vehicles-vanity-mts-iv-pack/">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-craftspeed">Craftspeed:</a></strong> Getting a stock car is just the beginning, time to make it your own unique project!</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-iav-parts-pack">IAV Parts Pack:</a></strong>The current parts library for VEB Automobilwerke Schwikau and Mackrel Automotive Industries.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-automobilwerke-schwikau-veb">VEB: Automobilwerke Schwikau:</a></strong>Do you need a bad car that lasts forever, or maybe a tank or two?  One of the more unique offerings!</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/golden-airport-pack-immersive-vehicles-content">GAP: Golden Airport Pack:</a></strong>A pack that aims to add realistic airliners into the game.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/gyro_heros-helicopter-pack-iv-mts">HA: Hero Aviation Helicopter Pack:</a></strong>Tried of hills and trees making flight difficult? Take off vertically with this pack (and shoot things!).</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mackrel-automotive-industries">MAI: Mackrel Automotive Industries:</a></strong>A collection of European vehicles from them 40s to the 70s. Ideal if you need something RHD.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/turbos-random-vehicles-pack">TRVP: Turbo's Random Vehicles Pack:</a></strong>Food trucks? Check. Patty Wagon? Check. Download? Check.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-iv-immersive-pokers-garage">IPG: Immersive Poker's Garage:</a></strong>World's finest exotic and luxury cars. Adds some exotic supercars, and parts for them</li>
@@ -64,6 +64,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>For when nothing is good enough, Hashim as you covered with some exelently polished vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-naomi-retro-vehicles">Naomi Retro Vehicles:</a></strong>From old to new machinecraft to minecraft these cars are back once again.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
 </ul>
