--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -37,7 +37,7 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
-<li><strong><a href="https://www.planetminecraft.com/mod/immersive-vehicles-vanity-mts-iv-pack/">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-craftspeed">Craftspeed:</a></strong> Getting a stock car is just the beginning, time to make it your own unique project!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
