--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -62,8 +62,9 @@
 <h4><strong>Small, New, and Old Packs.</strong></h4>
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>For when nothing is good enough, Hashim as you covered with some exelently polished vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/osog-city-cars">City Cars:</a></strong>Pack for ordinary city cars, 1980-1990 and modern. Mostly Russian.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-naomi-retro-vehicles">Naomi Retro Vehicles:</a></strong>From old to new machinecraft to minecraft these cars are back once again.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
